static/bootstrap/css/starter-template.css
body {
  padding-top: 20px;
}

.starter-template {
  padding: 40px 15px;
  text-align: center;
}

.navbar-fixed-top {
    min-height: 80px;
}

.navbar-nav > li > a {
    padding-top: 0px;
    padding-bottom: 0px;
    line-height: 80px;
}

.navbar-header {
    margin-right: 20px !important;
}

@media (max-width: 767px) {
    .navbar-nav > li > a {
    line-height: 20px;
    padding-top: 10px;
    padding-bottom: 10px;}

   .logo-size {
       max-width: 210px;
   }
}

@media (min-width: 768px) {
   .navbar-header {
       max-width: 210px;
   }
}


.cap-image{
    padding-top: 15px;
}

.icon-bar {
    background-color: #337ab7  !important;
}


.extended-content{
     margin-top: 20px;
     margin-left: 20px;
     padding-top: 0px;
     padding-left: 0px;
}

img {
    max-width: 100%;
    max-height: 100%;
}

.portrait {
    height: 25px;
    width: 25px;
    margin-left: 167px;
    margin-top:8px;

}


.curser-buttons {
    margin-left: 2px;
}

